# docs/swagger.json
@@ -80,7 +80,7 @@
                 "parameters": [
                     {
                         "maxLength": 100,
-                        "minLength": 3,
+                        "minLength": 2,
                         "description": "文章标题",
                         "name": "title",
                         "in": "body",
@@ -90,7 +90,7 @@
                         }
                     },
                     {
-                        "minLength": 3,
+                        "minLength": 2,
                         "description": "文章简介",
                         "name": "desc",
                         "in": "body",
@@ -99,7 +99,7 @@
                         }
                     },
                     {
-                        "minLength": 3,
+                        "minLength": 2,
                         "description": "文章内容",
                         "name": "content",
                         "in": "body",
@@ -110,7 +110,7 @@
                     },
                     {
                         "maxLength": 100,
-                        "minLength": 3,
+                        "minLength": 2,
                         "description": "文章封面",
                         "name": "cover_image_url",
                         "in": "body",
@@ -120,7 +120,7 @@
                     },
                     {
                         "maxLength": 100,
-                        "minLength": 3,
+                        "minLength": 2,
                         "description": "创建者",
                         "name": "created_by",
                         "in": "body",
@@ -181,25 +181,21 @@
                     },
                     {
                         "maxLength": 100,
+                        "type": "string",
                         "description": "文章标题",
                         "name": "title",
-                        "in": "body",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "in": "query"
                     },
                     {
                         "enum": [
                             0,
                             1
                         ],
+                        "type": "integer",
                         "default": 1,
                         "description": "状态",
                         "name": "state",
-                        "in": "body",
-                        "schema": {
-                            "type": "integer"
-                        }
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -238,7 +234,7 @@
                     },
                     {
                         "maxLength": 100,
-                        "minLength": 3,
+                        "minLength": 2,
                         "description": "文章标题",
                         "name": "title",
                         "in": "body",
@@ -247,7 +243,7 @@
                         }
                     },
                     {
-                        "minLength": 3,
+                        "minLength": 2,
                         "description": "文章简介",
                         "name": "desc",
                         "in": "body",
@@ -256,7 +252,7 @@
                         }
                     },
                     {
-                        "minLength": 3,
+                        "minLength": 2,
                         "description": "文章内容",
                         "name": "content",
                         "in": "body",
@@ -266,7 +262,7 @@
                     },
                     {
                         "maxLength": 100,
-                        "minLength": 3,
+                        "minLength": 2,
                         "description": "文章封面",
                         "name": "cover_image_url",
                         "in": "body",
@@ -289,7 +285,7 @@
                     },
                     {
                         "maxLength": 100,
-                        "minLength": 3,
+                        "minLength": 2,
                         "description": "修改者",
                         "name": "update_by",
                         "in": "body",
@@ -426,7 +422,7 @@
                 "parameters": [
                     {
                         "maxLength": 100,
-                        "minLength": 3,
+                        "minLength": 2,
                         "description": "标签名称",
                         "name": "name",
                         "in": "body",
@@ -450,7 +446,7 @@
                     },
                     {
                         "maxLength": 100,
-                        "minLength": 3,
+                        "minLength": 2,
                         "description": "创建者",
                         "name": "created_by",
                         "in": "body",
@@ -498,25 +494,21 @@
                     },
                     {
                         "maxLength": 100,
+                        "type": "string",
                         "description": "标签名称",
                         "name": "name",
-                        "in": "body",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "in": "query"
                     },
                     {
                         "enum": [
                             0,
                             1
                         ],
+                        "type": "integer",
                         "default": 1,
                         "description": "状态",
                         "name": "state",
-                        "in": "body",
-                        "schema": {
-                            "type": "integer"
-                        }
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -555,7 +547,7 @@
                     },
                     {
                         "maxLength": 100,
-                        "minLength": 3,
+                        "minLength": 2,
                         "description": "标签名称",
                         "name": "name",
                         "in": "body",
@@ -578,7 +570,7 @@
                     },
                     {
                         "maxLength": 100,
-                        "minLength": 3,
+                        "minLength": 2,
                         "description": "修改者",
                         "name": "update_by",
                         "in": "body",
@@ -699,7 +691,7 @@
                 "content": {
                     "type": "string"
                 },
-                "coverImageURL": {
+                "cover_image_url": {
                     "type": "string"
                 },
                 "create_by": {
@@ -778,7 +770,7 @@
                     "type": "string"
                 },
                 "state": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "update_by": {
                     "type": "string"
